# odbc-query

./: .gitignore  CMakeLists.txt  LICENSE  README.md  headeronly.sh
.github/workflows/: cmake-multi-platform.yml  msbuild.yml
VS2015/: ReadMe.txt  demo.vcxproj  demo.vcxproj.filters  odbcquery.vcxproj  odbcquery.vcxproj.filters  query.sln  qx.vcxproj  qx.vcxproj.filters
VS2019/: demo.vcxproj  demo.vcxproj.filters  odbcquery.vcxproj  odbcquery.vcxproj.filters  query.sln  qx.vcxproj  qx.vcxproj.filters
VS2022/: demo.vcxproj  demo.vcxproj.filters  odbcquery.vcxproj  odbcquery.vcxproj.filters  query.sln  qx.vcxproj  qx.vcxproj.filters
codelite.linux/: demo.project  odbc-query.workspace  odbcquery.project  query.project  qx.project
codelite.windows/: demo.project  odbcquery.project  query.workspace  qx.project
demo/: CMakeLists.txt  main.cpp
demo/mariadb_mysql/: testproc.sql
demo/mssql/: testproc.sql
linux/: demo.project  query.project  query.workspace  qx.project
query/: CMakeLists.txt  connection.cpp  connection.h  datarow.cpp  datarow.h  dbitem.cpp  dbitem.h  fieldinfo.cpp  fieldinfo.h  lvstring.cpp  lvstring.h  odbcenvironment.cpp  odbcenvironment.h  odbcexception.cpp  odbcexception.h  paraminfo.h  paramitem.cpp  paramitem.h  query.cpp  query.h  resultinfo.cpp  resultinfo.h  resultstream.cpp  resultstream.h  table.cpp  table.h  target.cpp  target.h  tstring.h
qx/: CLI11wu.hpp  CMakeLists.txt  qx.cpp  qx.h
single_header/: single_header.sh  std_includes.txt
